# VaultFlow

./: .env.example  .gitignore  README.md  dbt_project.yml  pyproject.toml
dags/: ETL_generate_data.py
dbt/: profiles.yml.example
dbt/models/marts/: monthly_sales.sql  revenue_by_category.sql
dbt/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql
docker/: .dockerignore  Dockerfile  docker-compose.yml  init.sql  requirements.txt  servers.json.example
models/marts/: top_customers_by_region.sql
models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_dates.sql  stg_locations.sql  stg_orders.sql  stg_products.sql
scripts/: load_data.py
scripts/aws/: s3export.py
scripts/core/: config.py  connection.py  logger.py
scripts/data_generators/: __init__.py  customers.py  dates.py  locations.py  orders.py  products.py  test.py
scripts/loaders/: __init__.py  base_loader.py  customer.py  date.py  location.py  order.py  product.py
scripts/pipelines/: task.py  task_failure.py
sql/: schema.sql  test.sql
